<resources>
    <string name="app_name" translatable="false">Oxygen AOD Mod</string>
    <string name="app_google_play_link" translatable="false">https://play.google.com/store/apps/details?id=org.xjiop.oxygenaodmod</string>
    <string name="source_code_link" translatable="false">https://github.com/XJIOP/Oxygen-AOD-Mod</string>
    <string name="source_code">Source code</string>
    <string name="category_main">MAIN</string>
    <string name="category_notification">NOTIFICATION</string>
    <string name="category_application">APPLICATION</string>
    <string name="key_service_description">Activate double tap on AOD screen.</string>
    <string name="about_app">About app</string>
    <string name="about_app_text">This app is open source, it was tested only on OnePlus 7th model devices. The app is not tied to OxygenOS and OnePlus, it can work on other devices with AMOLED screens.</string>
    <string name="version">Version</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notification_indicator_test">Notification indicator test</string>
    <string name="test_notification_confirm">Run test notification?</string>
    <string name="test_notification_descr">In 1 minute you should receive a test notification. Please turn off the screen to test notification indicator.</string>
    <string name="test_notification">Test notification</string>
    <string name="min_interval_sec">Min. 10 seconds</string>
    <string name="new_notifications">New notifications</string>
    <string name="test">Test</string>
    <string name="hello">Hello</string>
    <string name="double_tap">Double tap</string>
    <string name="double_tap_descr">Double tap on the AOD screen to open the lock screen</string>
    <string name="single_tap">Single tap</string>
    <string name="single_tap_descr">Only require a single tap on the AOD screen to open the lock screen</string>
    <string name="notification_indicator">Notification indicator</string>
    <string name="notification_indicator_descr">Show on screen off</string>
    <string name="interval">Interval</string>
    <string name="sound_settings">Sound settings</string>
    <string name="error">Error</string>
    <string name="confirmation">Confirm</string>
    <string name="sec">sec.</string>
    <string name="reset_when_screen_turn_on">Reset when screen turn on</string>
    <string name="bug_tracking">Bug tracking</string>
    <string name="bug_tracking_descr">Allow tracking crash errors and send to the developer</string>
    <string name="categories">Categories</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="alarm">Alarm</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="event">Event</string>
    <string name="msg">Message</string>
    <string name="reminder">Reminder</string>
    <string name="indicator">Indicator</string>
    <string name="social">Social network</string>
    <string name="sys">System</string>
    <string name="undefined">Undefined</string>
    <string name="number_impressions">Number of impressions</string>
    <string name="no_limits">No limits</string>
    <string name="of">of</string>
    <string name="schedule">Schedule</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="any_time">Any time</string>
    <string name="rate_app_text">If you like this app, please rate it.\n\nThanks for your support!</string>
    <string name="rate">Rate</string>
    <string name="no_thanks">No, thanks</string>
    <string name="cant_open_link">Can\'t open link</string>
    <string name="unknown_error">Unknown error</string>
    <string name="share">Share</string>
    <string name="attention">Attention</string>
    <string name="interval_info">When the screen is off, the device operates in energy-saving mode, so the interval does not guarantee the specified value. Enabling WAKE LOCK can solve this problem.</string>
    <string name="wake_lock" translatable="false">WAKE LOCK</string>
    <string name="wake_lock_descr">Keep CPU awake for a stable interval (only when there are notifications).</string>
    <string name="vibration">Vibration</string>
    <string name="color">Color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="enter_number">Enter a number</string>
    <string name="icon">Icon</string>
    <string name="android">Android</string>
    <string name="bell">Bell</string>
    <string name="eye">Eye</string>
    <string name="info">Info</string>
    <string name="star">Star</string>
    <string name="warning">Warning</string>
    <string name="show_notification_counter">Show notification counter</string>
    <string name="not_stable">Not stable</string>
    <string name="you_have_new_notification">You have a new notification</string>
    <string name="turn_on_screen">Turn on screen</string>
    <string name="instead_notifications">Instead of notifications</string>
    <string name="remind_later">Remind later</string>
    <string name="accept">Accept</string>
    <string name="accessibility_usage" translatable="false">Accessibility usage</string>
    <string name="accessibility_info" translatable="false">This app uses Accessibility Service only for Double tap to open the lock screen. The app does not collect or send any kind of information.</string>
    <string name="notification_usage" translatable="false">Notification usage</string>
    <string name="notification_info" translatable="false">This app uses Notification Access only for Notification indicator. The app does not collect or send any kind of information.</string>
    <string name="Language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="spanish" translatable="false">Espanol</string>
    <string name="french" translatable="false">Français</string>
    <string name="german" translatable="false">Deutsch</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="turkish" translatable="false">Türkçe</string>
    <string name="polish" translatable="false">Polski</string>
    <string name="vietnamese" translatable="false">Tiếng Việt</string>
    <string name="hebrew" translatable="false">עברית</string>
</resources>
