<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/category_main"
        android:key="category_main"
        android:selectable="false"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:title="@string/double_tap"
            android:key="double_tap"
            android:summary="@string/double_tap_descr"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:title="@string/vibration"
            android:key="vibration"
            android:defaultValue="true"
            android:dependency="double_tap"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_notification"
        android:key="category_notification"
        android:selectable="false"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:title="@string/notification_indicator"
            android:key="indicator"
            android:summary="@string/notification_indicator_descr"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:title="@string/reset_when_screen_turn_on"
            android:key="reset_when_screen_turn_on"
            android:defaultValue="true"
            android:dependency="indicator"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:title="@string/show_notification_counter"
            android:key="show_notification_counter"
            android:defaultValue="false"
            android:summary="@string/not_stable"
            android:dependency="indicator"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:title="@string/interval"
            android:key="interval"
            android:maxLength="4"
            android:singleLine="true"
            android:inputType="number"
            android:digits="0123456789"
            android:defaultValue="15"
            android:dependency="indicator"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:title="@string/number_impressions"
            android:key="amount"
            android:maxLength="4"
            android:singleLine="true"
            android:inputType="number"
            android:digits="0123456789"
            android:defaultValue="0"
            android:dependency="indicator"
            app:iconSpaceReserved="false" />

        <Preference
            android:title="@string/schedule"
            android:key="schedule"
            android:dependency="indicator"
            app:iconSpaceReserved="false" />

        <Preference
            android:title="@string/categories"
            android:key="categories"
            android:dependency="indicator"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:title="@string/color"
            android:key="color"
            android:entries="@array/listColor"
            android:entryValues="@array/listColorValues"
            android:defaultValue="1"
            android:dependency="indicator"
            app:iconSpaceReserved="false" />

        <Preference
            android:title="@string/icon"
            android:key="icon"
            android:defaultValue="warning"
            android:dependency="indicator"
            app:iconSpaceReserved="false" />

        <Preference
            android:title="@string/sound_settings"
            android:key="sound_settings"
            android:dependency="indicator"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:title="@string/wake_lock"
            android:key="wake_lock"
            android:defaultValue="true"
            android:summary="@string/wake_lock_descr"
            android:dependency="indicator"
            app:iconSpaceReserved="false" />

        <Preference
            android:title="@string/notification_indicator_test"
            android:key="test_notification"
            android:dependency="indicator"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_application"
        android:key="category_application"
        android:selectable="false"
        app:iconSpaceReserved="false">

        <ListPreference
            android:title="@string/Language"
            android:key="language"
            android:entries="@array/listLang"
            android:entryValues="@array/listLangValues"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:title="@string/bug_tracking"
            android:key="bug_tracking"
            android:summary="@string/bug_tracking_descr"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <Preference
            android:title="@string/about_app"
            android:key="about_app"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>